// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`job .create() : creates a new job 1`] = `
Object {
  "key": "snapshot",
  "method": "vm.snapshot",
  "name": "jobTest",
  "paramsVector": Object {
    "items": Array [
      Object {
        "type": "set",
        "values": Array [
          Object {
            "id": "d865d913-eb17-b1af-399c-07edbe57551c",
            "name": "test-snapshot",
          },
        ],
      },
    ],
    "type": "crossProduct",
  },
  "timeout": 2000,
  "type": "call",
}
`;

exports[`job .create() : fails trying to create a job without job params 1`] = `[JsonRpcError: invalid parameters]`;

exports[`job .get() : fails trying to get a job with a non existent id 1`] = `[JsonRpcError: no such job [object Object]]`;

exports[`job .get() : gets an existing job 1`] = `
Object {
  "key": "snapshot",
  "method": "vm.snapshot",
  "name": "jobTest",
  "paramsVector": Object {
    "items": Array [
      Object {
        "type": "set",
        "values": Array [
          Object {
            "id": "d865d913-eb17-b1af-399c-07edbe57551c",
            "name": "test-snapshot",
          },
        ],
      },
    ],
    "type": "crossProduct",
  },
  "timeout": 2000,
  "type": "call",
}
`;

exports[`job .getAll() : gets all available jobs 1`] = `
Array [
  Object {
    "key": "snapshot",
    "method": "vm.snapshot",
    "name": "jobTest",
    "paramsVector": Object {
      "items": Array [
        Object {
          "type": "set",
          "values": Array [
            Object {
              "id": "d865d913-eb17-b1af-399c-07edbe57551c",
              "name": "test-snapshot",
            },
          ],
        },
      ],
      "type": "crossProduct",
    },
    "timeout": 2000,
    "type": "call",
  },
  Object {
    "key": "snapshot",
    "method": "vm.snapshot",
    "name": "jobTest2",
    "paramsVector": Object {
      "items": Array [
        Object {
          "type": "set",
          "values": Array [
            Object {
              "id": "d865d913-eb17-b1af-399c-07edbe57551c",
              "name": "test2-snapshot",
            },
          ],
        },
      ],
      "type": "crossProduct",
    },
    "timeout": 2000,
    "type": "call",
  },
]
`;

exports[`job .set() : fails trying to set a job without job.id 1`] = `[JsonRpcError: invalid parameters]`;

exports[`job .set() : sets a job 1`] = `
Object {
  "key": "snapshot",
  "method": "vm.clone",
  "name": "jobTest",
  "paramsVector": Object {
    "items": Array [
      Object {
        "type": "set",
        "values": Array [
          Object {
            "full_copy": true,
            "id": "d865d913-eb17-b1af-399c-07edbe57551c",
            "name": "clone",
          },
        ],
      },
    ],
    "type": "cross product",
  },
  "timeout": 2000,
  "type": "call",
}
`;
